--- a/index.html
+++ b/index.html
@@ -26,20 +26,18 @@
             <!-- 上传图片 -->
             <div class="top-box">
                 <span class="title">图片上传</span>
-                <div class="btn file-box">
+                <!-- <div class="btn file-box">
                     选择文件
-                    <!-- onchange="selectImg(this)" -->
-                    
-                    <!-- <input type="file" accept="image/jpg,image/jpeg,image/png" name="file" id="file" class="btn" multiple="multiple"> -->
-                </div>
+                    <input type="file" accept="image/jpg,image/jpeg,image/png" name="file" id="file" class="btn" multiple="multiple">
+                </div> -->
                 <div class="right">预览区域</div>
             </div>
             <div class="s-upload-content">
                 <!-- 裁剪区域 -->
                 <div class="left-box">
-                    <!-- <p>点击或拖拽图片到这里上传</p>
+                    <p>点击或拖拽图片到这里上传</p>
                     <p>支持图片格式：.png/.jpg/.bmp/.jpeg</p>
-                    <p>支持图片大小：最大4M</p> -->
+                    <p>支持图片大小：最大4M</p>
                     <input type="file" accept="image/jpg,image/jpeg,image/png" name="file" id="file" multiple="multiple" style="position: absolute; width: 100%; height: 100%;top: 0; left: 0; ">
                     <!-- z-index: 1; -->
                     
