--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <div class="action bottom-box">
                 <!-- 旋转 -->
                 <div class="left">
-                    <input type="button" id="btnLeft" value="向左旋转" class="btn" onclick="rotateFn('1')">
-                    <input type="button" id="btnRight" value="向右旋转" class="btn" onclick="rotateFn('2')">
+                    <input type="button" id="btnLeft" value="向左旋转" class="btn">
+                    <input type="button" id="btnRight" value="向右旋转" class="btn">
                 </div>
                 <div class="right">
                     <!-- 裁剪、放大、缩小、还原 -->
